# GCC1625_T1

./: .gitignore  Auto.csv  GCC1625_T1_NICOLAS_VYCAS_NERY.ipynb  IE_T2_NICOLAS_VYCAS_NERY.ipynb  IE_T3_NICOLAS_VYCAS_NERY.ipynb  boston.csv  card_krueger_1994_mod.csv  golfe.csv  pyproject.toml
